# TcpServer_Linux

./: CMakeLists.txt  README.md
include/: macros.hpp  message_type.hpp  socketInit.hpp  tcp_client.cpp  tcp_client.hpp  tcp_server.cpp  tcp_server.hpp
src/: client.cpp  server.cpp
